<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Device specific settings -->
    <string name="device_settings_app_name">Advanced settings</string>

    <!-- Ambient display settings -->
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>

    <!-- Popup camera settings -->
    <string name="popup_title">Front camera settings</string>
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Enable LED light while the front camera appears and retracts</string>
    <string name="popup_sound_title">Sound effects</string>
    <string name="popup_sound_muqin">Xylophone</string>
    <string name="popup_sound_yingyan">Condor</string>
    <string name="popup_sound_mofa">Magic</string>
    <string name="popup_sound_jijia">Mecha</string>
    <string name="popup_sound_chilun">Gearwheel</string>
    <string name="popup_sound_cangmen">Cabin door</string>
    <string name="popup_sound_imperial_march">Star Wars© Imperial March</string>
    <string name="popup_sound_lightsaber">Star Wars© Lightsaber</string>
    <string name="popup_sound_throne_room">Star Wars© Throne Room</string>
    <string name="popup_super_mario">Super Mario</string>
    <string name="popup_calibration_title">Calibration</string>
    <string name="popup_calibration_summary">Calibrate the popup camera motor</string>
    <string name="popup_calibration_warning_title">Motor calibration</string>
    <string name="popup_calibration_warning_text">Unnecessary use of calibration may cause permanent damage. It is recommended to calibrate the popup camera motor only in case of it not moving properly or it being in incorrect position!</string>

    <!-- Popup camera strings -->
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_calibrate">Couldn\'t close front camera. Try calibrating the motor.</string>
    <string name="popup_camera_popup_failed_calibrate">Couldn\'t open front camera. Try calibrating the motor.</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now.</string>

    <!-- DC dimming settings -->
    <string name="dc_dimming_enable">Enable DC Dimming</string>
    <string name="dc_dimming_title">DC Dimming</string>
    <string name="dc_dimming_summary">Reduces eye strain in low light conditions</string>
    <string name="dc_dimming_summary_on">Enabled</string>
    <string name="dc_dimming_summary_off">Disabled</string>
    <string name="dc_dimming_info">Reduces eye strain in low light conditions but may result in reduced image quality and poor color production.</string>
    <string name="dc_dimming_auto_mode_title">Schedule</string>
    <string name="dc_dimming_mode_never">None</string>
    <string name="dc_dimming_mode_time">Turn on at the specified time</string>
    <string name="dc_dimming_mode_brightness">Turn on when brightness is below the threshold</string>
    <string name="dc_dimming_mode_full">Dependent on time and brightness</string>
    <string name="dc_dimming_brightness_title">Brightness threshold</string>
    <string name="dc_dimming_brightness_info">Only activate DC Dimming when the average brightness is below the threshold</string>
    <string name="dc_dimming_off_auto_mode_auto">Will turn on automatically</string>
    <string name="dc_dimming_on_auto_mode_auto">Will turn off automatically</string>
    <string name="dc_dimming_start_time">Start time</string>
    <string name="dc_dimming_end_time">End time</string>
    <string name="dc_dimming_node">/sys/devices/platform/soc/soc:qcom,dsi-display/msm_fb_ea_enable</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal Profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>

    <!-- Kcal settings -->
    <string name="kcal_settings_title">Display colors</string>
    <string name="kcal_settings_summary">Adjust the color of your display</string>
    <string name="kcal_enable_title">Enable display color configuration</string>
    <string name="kcal_enable_summary">Enables the configuration of the display color for a custom adjustment</string>
    <string name="kcal_not_supported">Display color settings is not supported by the kernel</string>
    <string name="red_slider_title">Red</string>
    <string name="green_slider_title">Green</string>
    <string name="blue_slider_title">Blue</string>    
    <string name="kcal_rgb_preference_category_title">RGB</string>
    <string name="kcal_calibration_preference_category_title">Color calibration</string>
    <string name="saturation_slider_title">Saturation</string>
    <string name="reset_default_button_title">Reset to default configuration</string>
    <string name="reset_default_button_summary">Reset all the configurations of this screen</string>
    <string name="contrast_slider_title">Contrast</string>
    
    <!-- Touch Control Settings -->
    <string name="touch_control_title">Touch Control</string>
    <string name="touch_game_mode_title">Enable game mode</string>
    <string name="touch_game_mode_summary">Increases touch sampling rate to 180Hz</string>
    <string name="touch_response_title">Touch response</string>
    <string name="touch_response_summary">Controls touch response</string>
    <string name="touch_sensitivity_title">Touch sensitivity</string>
    <string name="touch_sensitivity_summary">Controls touch sensitivity for repeated taps</string>
    <string name="touch_resistant_title">Touch-resistant area</string>
    <string name="touch_resistant_summary">Reduce touch sensitivity near the edges to avoid triggering touch controls</string>

    <!-- Vibration -->
    <string name="vibration_control_title">Vibration control</string>
    <string name="vibration_control_summary">Adjust the vibration strength</string>
    <string name="vibration_reset">The default value is set</string>
    <string name="vibration_control_description">Define the strength of the vibration for haptic feedback, incoming call and incoming notification</string>
</resources>
